<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_50">

    <!-- ================= MAIN ================= -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TOOLBAR -->

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal_700"
            app:title="@string/fuel_title"
            app:titleCentered="true"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_menu"
            app:navigationIconTint="@android:color/white"/>

        <!-- SCROLL AREA -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- INPUT CARD -->

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="22dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/teal_70">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="18dp">

                        <!-- DISTANCE -->

                        <!-- DISTANCE -->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/distance_hint"
                            android:layout_marginTop="6dp"

                            app:boxBackgroundMode="outline"
                            app:boxBackgroundColor="@android:color/white"

                            app:boxStrokeColor="@color/teal_700"
                            app:boxStrokeWidth="1dp"
                            app:boxStrokeWidthFocused="2dp"

                            app:hintTextColor="@color/teal_700"

                            app:boxCornerRadiusTopStart="14dp"
                            app:boxCornerRadiusTopEnd="14dp"
                            app:boxCornerRadiusBottomStart="14dp"
                            app:boxCornerRadiusBottomEnd="14dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDistance"
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:inputType="numberDecimal"
                                android:textColor="@color/teal_900"
                                android:textSize="16sp"
                                android:paddingStart="12dp"
                                android:paddingEnd="12dp"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- MILEAGE -->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:hint="@string/mileage_hint"

                            app:boxBackgroundMode="outline"
                            app:boxBackgroundColor="@android:color/white"

                            app:boxStrokeColor="@color/teal_700"
                            app:boxStrokeWidth="1dp"
                            app:boxStrokeWidthFocused="2dp"

                            app:hintTextColor="@color/teal_700"

                            app:boxCornerRadiusTopStart="14dp"
                            app:boxCornerRadiusTopEnd="14dp"
                            app:boxCornerRadiusBottomStart="14dp"
                            app:boxCornerRadiusBottomEnd="14dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etMileage"
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:inputType="numberDecimal"
                                android:textColor="@color/teal_900"
                                android:textSize="16sp"
                                android:paddingStart="12dp"
                                android:paddingEnd="12dp"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- FUEL PRICE -->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:hint="@string/fuel_price_hint"

                            app:boxBackgroundMode="outline"
                            app:boxBackgroundColor="@android:color/white"

                            app:boxStrokeColor="@color/teal_700"


                            app:boxCornerRadiusTopStart="14dp"
                            app:boxCornerRadiusTopEnd="14dp"
                            app:boxCornerRadiusBottomStart="14dp"
                            app:boxCornerRadiusBottomEnd="14dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etFuelPrice"
                                android:layout_width="match_parent"
                                android:layout_height="52dp"
                                android:inputType="numberDecimal"
                                android:textColor="@color/teal_900"
                                android:textSize="16sp"
                                android:paddingStart="12dp"
                                android:paddingEnd="12dp"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- BUTTONS -->

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCalculate"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/calculate"
                            android:layout_marginTop="20dp"
                            app:backgroundTint="@color/teal_700"
                            android:textColor="@android:color/white"
                            app:cornerRadius="20dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnClear"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/clear"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/white"
                            app:cornerRadius="20dp"
                            app:backgroundTint="@color/primary_dark"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- RESULT CARD -->

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/teal_700">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="18dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fuel_needed_label"
                            android:textSize="15sp"
                            android:textColor="#CCFFFFFF"/>

                        <TextView
                            android:id="@+id/tvFuelNeeded"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fuel_default"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_cost_label"
                            android:textSize="15sp"
                            android:textColor="#CCFFFFFF"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/tvTotalCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cost_default"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>



    </LinearLayout>

    <!-- ================= DRAWER ================= -->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"

        android:paddingBottom="16dp"

        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"

        app:itemTextColor="@color/black"
        app:itemIconTint="@null"

        app:itemBackground="@drawable/nav_item_bg"
        app:itemHorizontalPadding="20dp"
        app:itemIconPadding="16dp"
        app:itemVerticalPadding="15dp"/>

</androidx.drawerlayout.widget.DrawerLayout>